--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <h1>demo</h1>
+        <h2>demo</h2>
     
     </body>
 </html>
