--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h3>demo</h3>
     <h4>demo</h4>
     <h5>demo</h5>
+    <h6>demo</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, inventore sit.
          Est vitae nam quas placeat accusantium reprehenderit amet sapiente facere fuga! Velit ut delectus repellat ab, quam eum alias.</p>
 </body>
