--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Demo</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style.css">
-    </head>
-    <body>
-        <h1>demo</h1>
-        <h2>demo</h2>
-        <h4>demo</h4>
-    </body>
+
+<head>
+    <title>Demo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <h1>demo</h1>
+    <h2>demo</h2>
+    <h3>demo</h3>
+    <h4>demo</h4>
+    Lorem ipsum dzsolor, sit amet consectetur adipisicing elit. Earum perferendis velit reprehenderit illo autem ab at
+    nostrum accusamus. Modi, earum asperiores, eveniet veritatis fugit voluptates numquam molestiae ratione similique
+    autem dolore omnis explicabo quidem quaerat eligendi provident necessitatibus cumque ad.gi
+    commi <h6>demo</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, inventore sit.
+        Est vitae nam quas placeat accusantium reprehenderit amet sapiente facere fuga! Velit ut delectus repellat ab,
+        quam eum alias.</p>
+</body>
+
 </html>
