--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ commi    <h6>demo</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, inventore sit.
          Est vitae nam quas placeat accusantium reprehenderit amet sapiente facere fuga! Velit ut delectus repellat ab, quam eum alias.</p>
     <span><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam voluptates quaerat officiis ullam asperiores earum praesentium et rem modi nisi. Eaque, cumque sequi aliquid velit, quo accusamus commodi vero nostrum, eligendi odio possimus. Sed, unde alias repudiandae totam nisi debitis?</p></span>
+    <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, at!</span>
 </body>
 
 </html>
